tmp-dev-full/objects/VoucherCategory__c/VoucherCategory__c.object-meta.xml
<CustomObject>
    <label>쿠폰 범주</label>
    <nameField>
        <label>쿠폰 범주 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>