tmp-dev-full/objects/VoucherCategory__c/fields/CatalogId__c.field-meta.xml
<CustomField>
    <fullName>CatalogId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>카탈로그</label>
    <referenceTo>ProductCatalog</referenceTo>
    <relationshipLabel>쿠폰 범주</relationshipLabel>
    <relationshipName>CatalogId</relationshipName>
    <type>Lookup</type>
</CustomField>