tmp-dev-full/objects/VoucherCategory__c/fields/VoucherCategoryId__c.field-meta.xml
<CustomField>
    <fullName>VoucherCategoryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>쿠폰 상위 범주</label>
    <referenceTo>VoucherCategory__c</referenceTo>
    <relationshipLabel>쿠폰 범주</relationshipLabel>
    <relationshipName>VoucherCategoryId</relationshipName>
    <type>Lookup</type>
</CustomField>